Ajout de MudBlazor et mise à jour de la structure du projet pour intégrer les composants de l'interface utilisateur

--- a/WebPanel/projetIa/Shared/MainLayout.razor
+++ b/WebPanel/projetIa/Shared/MainLayout.razor
@@ -2,4 +2,14 @@
 
 <PageTitle>projetIa</PageTitle>
 
+@* Required *@
+<MudThemeProvider />
+<MudPopoverProvider />
+
+@* Needed for dialogs *@
+<MudDialogProvider />
+
+@* Needed for snackbars *@
+<MudSnackbarProvider />
+
 @Body
