--- a/WebPanel/projetIa/wwwroot/css/site.css
+++ b/WebPanel/projetIa/wwwroot/css/site.css
@@ -66,3 +66,8 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+nav {
+
+    border : 3px solid blue;
+}
