--- a/WebPanel/projetIa/Pages/Index/Index.razor
+++ b/WebPanel/projetIa/Pages/Index/Index.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 
 @using projetIa.Composants.NavBar
+@using projetIa.Composants.Footer
 
 <NavBar />
 
@@ -98,5 +99,7 @@
         </MudCardContent>
     </MudCard>
 </MudContainer>
+
+<Footer />
 
 <MudSnackbarProvider />
