--- a/WebPanel/projetIa/Composants/NavBar/NavBar.razor.css
+++ b/WebPanel/projetIa/Composants/NavBar/NavBar.razor.css
@@ -1,4 +1,113 @@
 nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black;
+    height: 10vh;
 
-    border : 3px solid red;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    margin-bottom: 5vw;
+}
+
+.gauche {
+    display: flex;
+    align-items: center;
+}
+
+.centre {
+    display: flex;
+    align-items: center;
+}
+
+.droite {
+    display: flex;
+    align-items: center;
+}
+
+p {
+    color: white;
+    margin: 0%;
+}
+
+.gauche, .droite, .centre {
+    height: 100%;
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+}
+
+.centre {
+    width: 40%;
+    justify-content: center;
+}
+
+.gauche {
+    justify-content: flex-start;
+    padding-left: 3rem;
+}
+
+.droite {
+    justify-content: flex-end;
+    padding-right: 3rem;
+}
+
+.gauche img {
+    height: 75%;
+    margin-right: 1rem;
+}
+
+.gauche p {
+    font-size: 1.5rem;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.gauche img, .droite img, .centre img {
+
+    width: auto;
+}
+
+.centre img {
+    height: 70%;
+}
+
+.droite img {
+
+    height: 54%;
+    width: auto;
+}
+
+@media (max-width: 1024px) {
+    nav {
+        flex-direction: column;
+        height: auto;
+        padding: 1rem 0;
+    }
+
+    .gauche, .droite, .centre {
+        width: 100%;
+        justify-content: center;
+        padding: 0.5rem 0;
+    }
+
+    .gauche p {
+        font-size: 1.2rem;
+    }
+
+    .gauche p {
+        font-size: 1.7rem;
+    }
+
+    .gauche img {
+        height: 3.8rem;
+    }
+
+    .centre img {
+        height: 3.8rem;
+    }
+
+    .droite img {
+        height: 2.2rem;
+    }
 }
